--- a/tasks-api/package.json
+++ b/tasks-api/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "body-parser": "^1.19.0",
-    "axios": "^0.20.0",
-    "prom-client": "^14.1.0"
+    "prom-client": "^14.0.1",
+    "axios": "^0.20.0"
   }
 }
