Prometheus operator now monitors the tasks api, thanks to the corresponding ServiceMonitor

--- a/kubernetes/tasks-service.yaml
+++ b/kubernetes/tasks-service.yaml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: tasks-service
+  labels:
+    app: tasks
 spec:
   selector:
     app: tasks
   type: LoadBalancer
   ports:
-    - protocol: TCP
+    - name: web-tasks
+      protocol: TCP
       port: 8000
       targetPort: 8000
