--- a/kubernetes/tasks-deployment.yaml
+++ b/kubernetes/tasks-deployment.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
         - name: tasks
           image: yann1kma/kub-app-tasks:latest
+          ports:
+          - name: web-tasks
+            containerPort: 8000
           env:
             - name: AUTH_ADDRESS
               value: "auth-service.default"
